tests/negative/neg_pr113_access_tuple_element.safe
package Neg_PR113_Access_Tuple_Element
   type Int_Access is access Integer;
   Value : (Int_Access, Integer);

